# pixel-forge

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/backends/: CPUMultiBackend.cpp  CPUMultiBackend.hpp  CPUSingleBackend.cpp  CPUSingleBackend.hpp  CUDABackend.cpp  CUDABackend.hpp  MetalBackend.hpp  MetalBackend.mm
src/core/: BackendRegistry.cpp  BackendRegistry.hpp  Benchmark.cpp  Benchmark.hpp  FilterRegistry.cpp  FilterRegistry.hpp  IBackend.hpp  IFilter.hpp  Image.cpp  Image.hpp  parallel.hpp  stb_impl.cpp
src/filters/: BilateralFilter.cpp  BilateralFilter.hpp  GaussianBlur.cpp  GaussianBlur.hpp  Grayscale.cpp  Grayscale.hpp  HistogramEqualization.cpp  HistogramEqualization.hpp  KuwaharaFilter.cpp  KuwaharaFilter.hpp  SobelEdge.cpp  SobelEdge.hpp
src/shaders/: filters.cu
tests/: test_backends.cpp  test_filters.cpp  test_image.cpp  test_integration.cpp  test_registries.cpp
